# dgx-spark-playbooks

./: AGENTS.md
nvidia/multi-agent-chatbot/assets/backend/: pyproject.toml
nvidia/multi-agent-chatbot/assets/frontend/: package-lock.json  package.json
nvidia/portfolio-optimization/assets/setup/: pyproject.toml
nvidia/single-cell/assets/setup/: requirements.txt
nvidia/txt2kg/assets/deploy/services/gpu-viz/: requirements-remote-webgpu.txt  requirements.txt
nvidia/txt2kg/assets/deploy/services/sentence-transformers/: requirements.txt
nvidia/txt2kg/assets/frontend/: package.json
